# gt-marketing-hub

./: .env.example  .gitignore  README.md  WRITEUP.md
backend/: .dockerignore  .vercelignore  Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: main.py
backend/app/adapters/: _resilience.py  registry.py
backend/app/ai/: brand_judge.py  client.py  conditioning.py  cost.py  json_parse.py  pricing.py
backend/app/api/: _crm_ops_cache.py  admissions.py  ai_actions.py  ambassadors.py  auth.py  budget.py  contact_outcome.py  content.py  content_analytics.py  content_kanban.py  crm_ops.py  crm_status.py  crm_sync.py  decisions.py  deps.py  enrollment.py  evals.py  families.py  field_events.py  funding.py  geo.py  grassroots.py  layouts.py  marketing.py  merge.py  notes.py  nurture.py  open_data.py  payments.py  publish.py  schemas.py  scoreboard.py  scorecard.py  seam.py  security.py  summer.py  website.py
backend/app/core/: admissions.py  agent_kpis.py  ambassador_reconcile.py  assignment.py  authz.py  budget.py  contact_log.py  contact_status.py  content_analytics.py  conversion.py  crm_sync.py  daily_spend.py  dashboard_layout.py  data_quality.py  decision_change.py  decision_queue.py  eval_gate.py  family_record.py  field_events.py  field_reliability.py  funding_gate.py  grassroots.py  identity.py  jwt_verify.py  lead_routing.py  metric_provenance.py  notes.py  nurture.py  params.py  parity.py  payments.py  pipeline.py  program.py  recovery_state.py  sales_agents.py  scoreboard.py  seam.py  security_posture.py  settings.py  sis_reconcile.py  (+9 more)
backend/app/coworker/: __init__.py  core.py  mcp_server.py
backend/app/data/: admissions_store.py  budget_store.py  camp_store.py  content_metrics_store.py  crm_ops_store.py  decisions_store.py  field_events_store.py  goals_store.py  grassroots_store.py  layouts_store.py  library_ingest.py  models.py  notes_repository.py  nurture_store.py  payments_store.py  repository.py  sis_reconcile_job.py  sis_roster.py  supabase_repository.py  synthetic.py  synthetic_ambassadors.py  synthetic_summer.py  watermark_store.py  website_store.py
backend/app/evals/: __init__.py  geo_metrics.py  geo_tracking_eval.py  metrics.py  suite.py
backend/app/marketing/: creator_scoring.py  geo.py  keep_discard.py  kpi_board.py  library.py  pipeline.py  posted_catalog.py  posted_gallery.py  publish.py  recipe_run.py  review_queue.py  scheduler.py
backend/app/observability/: log_store.py  security_log.py
backend/params/: params.yaml
backend/scripts/: provision_hubspot.py  seed_demo_supabase.py  teardown_hubspot.py
backend/scripts/demo/: stripe_edge_cases.py
backend/tests/: conftest.py
backend/tests/adapters/: test_analytics_simulated.py  test_brand_memory_store.py  test_crm_nurture_aggregates.py  test_funding_adapter.py  test_geo_sampling.py  test_hubspot_adapter.py  test_live_hubspot_adapter.py  test_media_gen.py  test_media_live_adapter.py  test_open_data.py  test_payments_adapter.py  test_resilience.py  test_rls_regression.py  test_sentiment.py  test_sheets_adapter.py  test_sheets_live_smoke.py  test_simulated_sis.py  test_sis_adapter.py  test_social.py  test_social_post_mirror.py  test_stage_map.py  test_teardown_hubspot.py
backend/tests/api/: _jwt.py  test_admissions_api.py  test_agents_rollup.py  test_agents_rollup_window.py  test_ambassadors_api.py  test_assign.py  test_assignment_history.py  test_auth_demo_token.py  test_auto_assign.py  test_budget_api.py  test_content_analytics_api.py  test_content_kanban_api.py  test_crm_ops.py  test_crm_ops_cache.py  test_crm_ops_views.py  test_crm_sync_api.py  test_decisions.py  test_decisions_autoflag.py  test_demo_principal.py  test_field_events_api.py  test_goals.py  test_grassroots_api.py  test_layouts.py  test_nurture_api.py  test_open_data_api.py  test_payments_api.py  test_principal.py  test_principal_scope.py  test_scorecard.py  test_security.py  test_sis_buckets.py  test_sla_sweep.py  test_summer_api.py  test_website_api.py
backend/tests/core/: test_admissions.py  test_authz.py  test_budget.py  test_dashboard_layout.py  test_data_quality.py  test_decision_change.py  test_decision_queue.py  test_field_reliability.py  test_jwt_verify.py  test_nurture_lifecycle.py  test_params_rbac.py  test_params_scorecard.py  test_sis_reconcile.py  test_utm_health.py  test_utm_repair.py  test_website.py  test_weekly_scorecard.py
backend/tests/coworker/: test_coworker.py
backend/tests/data/: test_admissions_store.py  test_budget_store.py  test_demo_cohort.py  test_library_ingest.py  test_library_ingest_wiring.py  test_nurture_store.py  test_payments_store.py  test_repository_household_roll_up.py  test_sis_roster.py  test_supabase_repository.py  test_watermark_store.py  test_website_store.py
backend/tests/db/: test_app_role.py
backend/tests/evals/: test_brand_judge.py  test_close_tips_grounding.py  test_content_gate.py  test_doc_extraction.py  test_geo_metrics.py  test_geo_tracking_eval.py  test_message_safety_grounding.py  test_nudge_trigger.py  test_suite.py
backend/tests/marketing/: test_campaign_tagging_on_keep.py  test_geo_gate_acceptance.py  test_geo_schema.py  test_keep_promotes_library_and_memory.py  test_kill_switch_degrades_generation.py  test_library_persistence.py  test_library_reset_isolation.py  test_library_search.py  test_posted_catalog_gallery_endpoint.py  test_posted_gallery_endpoint.py  test_review_queue_requires_approval.py
backend/tests/support/: content_library.py
backend/tests/unit/: test_agent_kpis.py  test_ai_endpoints.py  test_ambassador_reconcile.py  test_api_drop_off.py  test_api_enrollment_calendar.py  test_api_enrollment_read.py  test_api_households.py  test_api_pipeline.py  test_api_students.py  test_assignment.py  test_brand_memory_schema.py  test_bulk_actions.py  test_camp_store.py  test_campaign_generate.py  test_client_pricing.py  test_close_tips_endpoint.py  test_close_tips_graph.py  test_cockpit_repo_override.py  test_contact_log.py  test_contact_outcome.py  test_contact_outcome_api.py  test_contact_status.py  (+70 more)
(+395 files in other folders)
