[project]
name = "gt-growth-cockpit-backend"
version = "0.1.0"
description = "GT Pulse backend — deterministic core, LLM at the edge, eval-gated."
requires-python = ">=3.12,<3.13"

# Direct runtime dependencies. Hard ceiling: <= 15 (TECH_STACK.md §4.1).
# S0 ships ONLY what the bootable skeleton needs. Later slices add
# anthropic, langgraph, supabase, pandas, tenacity (YAGNI here).
# httpx is a RUNTIME dep as of S10 W3: the live HubSpot CRM adapter
# (app/adapters/hubspot/live_adapter.py) imports it to push synthetic data
# into the real portal when CRM_MODE=live (ANALYSIS/hubspot-complement-plan.md).
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pyyaml",
    "python-dotenv",
    "mangum",
    "httpx",
]

[dependency-groups]
# Dev/test tooling — does NOT count against the §4.1 runtime ceiling.
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-PyYAML",     # mypy-strict stubs for pyyaml (type-only, not a runtime dep)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — single tool for lint + format (TECH_STACK.md §3.2).
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# ---------------------------------------------------------------------------
# mypy — strict on application code (TECH_STACK.md §3.2).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
files = ["app"]

# ---------------------------------------------------------------------------
# pytest (TECH_STACK.md §3.2).
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
