[project]
name = "gt-growth-cockpit-backend"
version = "0.1.0"
description = "GT Pulse backend — deterministic core, LLM at the edge, eval-gated."
requires-python = ">=3.12,<3.13"

# Direct runtime dependencies. Hard ceiling: <= 15 (TECH_STACK.md §4.1).
# S0 ships ONLY what the bootable skeleton needs. Later slices add
# anthropic, langgraph, supabase, pandas, tenacity (YAGNI here).
# httpx is a RUNTIME dep as of S10 W3: the live HubSpot CRM adapter
# (app/adapters/hubspot/live_adapter.py) imports it to push synthetic data
# into the real portal when CRM_MODE=live (ANALYSIS/hubspot-complement-plan.md).
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pyyaml",
    "python-dotenv",
    "mangum",
    "httpx",
]

[dependency-groups]
# Dev/test tooling — does NOT count against the §4.1 runtime ceiling.
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-PyYAML",     # mypy-strict stubs for pyyaml (type-only, not a runtime dep)
    "psycopg[binary]",  # optional direct-DSN driver for the live app-role proof (tests/db/test_app_role.py); dev-only
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — single tool for lint + format (TECH_STACK.md §3.2).
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# ---------------------------------------------------------------------------
# mypy — strict on application code (TECH_STACK.md §3.2).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
files = ["app"]

# `anthropic` is an OPTIONAL live-only dependency (TECH_STACK §4.1 — not in the
# runtime dep set; imported lazily in app/ai/client.py). mypy must pass whether
# or not it is installed: absent ⇒ this suppresses import-not-found (no inline
# ignore to go stale under strict's warn_unused_ignores); present ⇒ the real
# types are used and the transport's block narrowing is checked normally.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

# `mcp` is an OPTIONAL transport-only dependency (M6 coworker; ASSUMPTIONS A-33 —
# NOT in the runtime dep set; import-guarded in app/coworker/mcp_server.py). The
# coworker CORE is dependency-free and fully gate-tested; the MCP wrapper is glue.
# mypy must pass whether or not the SDK is installed: absent ⇒ this suppresses
# import-not-found (no inline ignore to go stale under strict's warn_unused_ignores).
[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

# The import-guarded MCP wrapper itself: its tool callables are decorated by the
# optional, untyped FastMCP SDK (untyped-decorator) and rebind `FastMCP = None` on
# the absent-SDK branch. It is thin glue around the tested core (A-33), so strict
# is relaxed on this ONE module — the core (app/coworker/core.py) stays fully strict.
[[tool.mypy.overrides]]
module = ["app.coworker.mcp_server"]
disallow_untyped_decorators = false
allow_untyped_defs = true
warn_unused_ignores = false

# ---------------------------------------------------------------------------
# pytest (TECH_STACK.md §3.2).
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
